--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        header {
-            text-align: center;
-            padding: 10px;
-            background-color: #6e1818;
-        }
-        section {
-            margin: 20px 0;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -48,5 +30,6 @@
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 
+    <script src="app.js"></script>
 </body>
 </html>
