--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section>
         <h2>About Me</h2>
-        <p>This is a sample webpage to demonstrate basic HTML structure and styling.</p>
+        <p>Started on 24 feb, 2024</p>
     </section>
 
     <section>
